core-webapp/src/main/java/nikita/webapp/odata/ODataParser.java
// Generated from /home/tsodring/git/nikita-noark5-core/core-webapp/src/main/resources/odata/OData.g4 by ANTLR 4.7
package nikita.webapp.test.odata;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ODataParser extends Parser {
	public static final int
			T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, WHITESPACE = 16,
			EQ = 17, GT = 18, LT = 19, GE = 20, LE = 21, AND = 22, OR = 23, ASC = 24, DESC = 25, TOP = 26,
			SKIP_ = 27, COUNT = 28, ORDERBY = 29, WS = 30, DIGITS = 31, HEX = 32, STRING = 33, COLON = 34,
			SEPERATOR = 35;
	public static final int
			RULE_odataURL = 0, RULE_scheme = 1, RULE_host = 2, RULE_slash = 3, RULE_contextPath = 4,
			RULE_api = 5, RULE_functionality = 6, RULE_resource = 7, RULE_port = 8,
			RULE_fromContextPath = 9, RULE_odataCommand = 10, RULE_filter = 11, RULE_search = 12,
			RULE_top = 13, RULE_skip = 14, RULE_orderby = 15, RULE_searchCommand = 16,
			RULE_filterCommand = 17, RULE_command = 18, RULE_comparatorCommand = 19,
			RULE_contains = 20, RULE_startsWith = 21, RULE_attribute = 22, RULE_value = 23,
			RULE_sortOrder = 24, RULE_comparator = 25, RULE_operator = 26, RULE_leftCurlyBracket = 27,
			RULE_rightCurlyBracket = 28, RULE_and = 29, RULE_or = 30, RULE_eq = 31,
			RULE_gt = 32, RULE_lt = 33, RULE_ge = 34, RULE_le = 35, RULE_string = 36,
			RULE_number = 37, RULE_asc = 38, RULE_desc = 39;
	public static final String[] ruleNames = {
			"odataURL", "scheme", "host", "slash", "contextPath", "api", "functionality",
			"resource", "port", "fromContextPath", "odataCommand", "filter", "search",
			"top", "skip", "orderby", "searchCommand", "filterCommand", "command",
			"comparatorCommand", "contains", "startsWith", "attribute", "value", "sortOrder",
			"comparator", "operator", "leftCurlyBracket", "rightCurlyBracket", "and",
			"or", "eq", "gt", "lt", "ge", "le", "string", "number", "asc", "desc"
	};
	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	public static final ATN _ATN =
			new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	private static final String[] _LITERAL_NAMES = {
			null, "'http'", "'https'", "'/'", "'?'", "'$filter='", "'$search='", "'$top='",
			"'$skip='", "'$orderby='", "'''", "'contains'", "','", "'startsWith'",
			"'('", "')'", null, "'eq'", "'gt'", "'lt'", "'ge'", "'le'", "'and'", "'or'",
			"'asc'", "'desc'", "'top'", "'skip'", "'count'", "'orderby'", null, null,
			null, null, "':'", "'://'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, "WHITESPACE", "EQ", "GT", "LT", "GE", "LE", "AND",
			"OR", "ASC", "DESC", "TOP", "SKIP_", "COUNT", "ORDERBY", "WS", "DIGITS",
			"HEX", "STRING", "COLON", "SEPERATOR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	static {
		RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
	}

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}

	public ODataParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "OData.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public final OdataURLContext odataURL() throws RecognitionException {
		OdataURLContext _localctx = new OdataURLContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_odataURL);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(80);
				scheme();
				setState(81);
				match(SEPERATOR);
				setState(82);
				host();
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == COLON) {
					{
						setState(83);
						match(COLON);
						setState(84);
						port();
					}
				}

				setState(87);
				fromContextPath();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final SchemeContext scheme() throws RecognitionException {
		SchemeContext _localctx = new SchemeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scheme);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(89);
				_la = _input.LA(1);
				if (!(_la == T__0 || _la == T__1)) {
					_errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final HostContext host() throws RecognitionException {
		HostContext _localctx = new HostContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_host);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(91);
				string();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final SlashContext slash() throws RecognitionException {
		SlashContext _localctx = new SlashContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_slash);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(93);
				match(T__2);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ContextPathContext contextPath() throws RecognitionException {
		ContextPathContext _localctx = new ContextPathContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_contextPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(95);
				match(T__2);
				setState(96);
				string();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ApiContext api() throws RecognitionException {
		ApiContext _localctx = new ApiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_api);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(98);
				match(T__2);
				setState(99);
				string();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final FunctionalityContext functionality() throws RecognitionException {
		FunctionalityContext _localctx = new FunctionalityContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionality);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(101);
				match(T__2);
				setState(102);
				string();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ResourceContext resource() throws RecognitionException {
		ResourceContext _localctx = new ResourceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_resource);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(104);
				string();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final PortContext port() throws RecognitionException {
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_port);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(106);
				match(DIGITS);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final FromContextPathContext fromContextPath() throws RecognitionException {
		FromContextPathContext _localctx = new FromContextPathContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fromContextPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(108);
				contextPath();
				setState(109);
				api();
				setState(110);
				functionality();
				setState(111);
				match(T__2);
				setState(112);
				resource();
				setState(113);
				match(T__3);
				setState(114);
				odataCommand();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final OdataCommandContext odataCommand() throws RecognitionException {
		OdataCommandContext _localctx = new OdataCommandContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_odataCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) {
					{
						setState(120);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
							case T__4: {
								setState(116);
								filter();
							}
							break;
							case T__6: {
								setState(117);
								top();
							}
							break;
							case T__7: {
								setState(118);
								skip();
							}
							break;
							case T__8: {
								setState(119);
								orderby();
							}
							break;
							default:
								throw new NoViableAltException(this);
						}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_filter);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(125);
				match(T__4);
				setState(126);
				filterCommand();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final SearchContext search() throws RecognitionException {
		SearchContext _localctx = new SearchContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_search);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(128);
				match(T__5);
				setState(129);
				searchCommand();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final TopContext top() throws RecognitionException {
		TopContext _localctx = new TopContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_top);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(131);
				match(T__6);
				setState(132);
				number();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final SkipContext skip() throws RecognitionException {
		SkipContext _localctx = new SkipContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_skip);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(134);
				match(T__7);
				setState(135);
				number();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final OrderbyContext orderby() throws RecognitionException {
		OrderbyContext _localctx = new OrderbyContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_orderby);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(137);
				match(T__8);
				setState(138);
				attribute();
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == ASC || _la == DESC) {
					{
						setState(139);
						sortOrder();
					}
				}

				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == STRING) {
					{
						{
							setState(142);
							attribute();
							setState(144);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la == ASC || _la == DESC) {
								{
									setState(143);
									sortOrder();
								}
							}

						}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final SearchCommandContext searchCommand() throws RecognitionException {
		SearchCommandContext _localctx = new SearchCommandContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_searchCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(151);
				string();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final FilterCommandContext filterCommand() throws RecognitionException {
		FilterCommandContext _localctx = new FilterCommandContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_filterCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(155);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
					case T__10:
					case T__12: {
						setState(153);
						command();
					}
					break;
					case STRING: {
						setState(154);
						comparatorCommand();
					}
					break;
					default:
						throw new NoViableAltException(this);
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == AND || _la == OR) {
					{
						setState(157);
						operator();
						setState(158);
						filterCommand();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(164);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
					case T__10: {
						setState(162);
						contains();
					}
					break;
					case T__12: {
						setState(163);
						startsWith();
					}
					break;
					default:
						throw new NoViableAltException(this);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ComparatorCommandContext comparatorCommand() throws RecognitionException {
		ComparatorCommandContext _localctx = new ComparatorCommandContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_comparatorCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
				{
					setState(166);
					attribute();
					setState(167);
					comparator();
					setState(168);
					match(T__9);
					setState(169);
					value();
					setState(170);
					match(T__9);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ContainsContext contains() throws RecognitionException {
		ContainsContext _localctx = new ContainsContext(_ctx, getState());
		enterRule(_localctx, 40, RULE_contains);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(172);
				match(T__10);
				setState(173);
				leftCurlyBracket();
				setState(174);
				attribute();
				setState(175);
				match(T__11);
				setState(176);
				match(T__9);
				setState(177);
				value();
				setState(178);
				match(T__9);
				setState(179);
				rightCurlyBracket();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final StartsWithContext startsWith() throws RecognitionException {
		StartsWithContext _localctx = new StartsWithContext(_ctx, getState());
		enterRule(_localctx, 42, RULE_startsWith);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(181);
				match(T__12);
				setState(182);
				leftCurlyBracket();
				setState(183);
				attribute();
				setState(184);
				match(T__11);
				setState(185);
				match(T__9);
				setState(186);
				value();
				setState(187);
				match(T__9);
				setState(188);
				rightCurlyBracket();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 44, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(190);
				string();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 46, RULE_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(192);
				string();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final SortOrderContext sortOrder() throws RecognitionException {
		SortOrderContext _localctx = new SortOrderContext(_ctx, getState());
		enterRule(_localctx, 48, RULE_sortOrder);
		try {
			setState(196);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case ASC:
					enterOuterAlt(_localctx, 1);
				{
					setState(194);
					asc();
				}
				break;
				case DESC:
					enterOuterAlt(_localctx, 2);
				{
					setState(195);
					desc();
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final ComparatorContext comparator() throws RecognitionException {
		ComparatorContext _localctx = new ComparatorContext(_ctx, getState());
		enterRule(_localctx, 50, RULE_comparator);
		try {
			setState(203);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case EQ:
					enterOuterAlt(_localctx, 1);
				{
					setState(198);
					eq();
				}
				break;
				case GT:
					enterOuterAlt(_localctx, 2);
				{
					setState(199);
					gt();
				}
				break;
				case LT:
					enterOuterAlt(_localctx, 3);
				{
					setState(200);
					lt();
				}
				break;
				case GE:
					enterOuterAlt(_localctx, 4);
				{
					setState(201);
					ge();
				}
				break;
				case LE:
					enterOuterAlt(_localctx, 5);
				{
					setState(202);
					le();
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 52, RULE_operator);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(207);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
					case AND: {
						setState(205);
						and();
					}
					break;
					case OR: {
						setState(206);
						or();
					}
					break;
					default:
						throw new NoViableAltException(this);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final LeftCurlyBracketContext leftCurlyBracket() throws RecognitionException {
		LeftCurlyBracketContext _localctx = new LeftCurlyBracketContext(_ctx, getState());
		enterRule(_localctx, 54, RULE_leftCurlyBracket);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(209);
				match(T__13);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final RightCurlyBracketContext rightCurlyBracket() throws RecognitionException {
		RightCurlyBracketContext _localctx = new RightCurlyBracketContext(_ctx, getState());
		enterRule(_localctx, 56, RULE_rightCurlyBracket);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(211);
				match(T__14);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 58, RULE_and);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(213);
				match(AND);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final OrContext or() throws RecognitionException {
		OrContext _localctx = new OrContext(_ctx, getState());
		enterRule(_localctx, 60, RULE_or);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(215);
				match(OR);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final EqContext eq() throws RecognitionException {
		EqContext _localctx = new EqContext(_ctx, getState());
		enterRule(_localctx, 62, RULE_eq);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(217);
				match(EQ);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final GtContext gt() throws RecognitionException {
		GtContext _localctx = new GtContext(_ctx, getState());
		enterRule(_localctx, 64, RULE_gt);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(219);
				match(GT);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final LtContext lt() throws RecognitionException {
		LtContext _localctx = new LtContext(_ctx, getState());
		enterRule(_localctx, 66, RULE_lt);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(221);
				match(LT);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final GeContext ge() throws RecognitionException {
		GeContext _localctx = new GeContext(_ctx, getState());
		enterRule(_localctx, 68, RULE_ge);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(223);
				match(GE);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final LeContext le() throws RecognitionException {
		LeContext _localctx = new LeContext(_ctx, getState());
		enterRule(_localctx, 70, RULE_le);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(225);
				match(LE);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 72, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(227);
				match(STRING);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 74, RULE_number);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(229);
				match(DIGITS);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final AscContext asc() throws RecognitionException {
		AscContext _localctx = new AscContext(_ctx, getState());
		enterRule(_localctx, 76, RULE_asc);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(231);
				match(ASC);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final DescContext desc() throws RecognitionException {
		DescContext _localctx = new DescContext(_ctx, getState());
		enterRule(_localctx, 78, RULE_desc);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(233);
				match(DESC);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OdataURLContext extends ParserRuleContext {
		public OdataURLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		public SchemeContext scheme() {
			return getRuleContext(SchemeContext.class, 0);
		}

		public TerminalNode SEPERATOR() {
			return getToken(ODataParser.SEPERATOR, 0);
		}

		public HostContext host() {
			return getRuleContext(HostContext.class, 0);
		}

		public FromContextPathContext fromContextPath() {
			return getRuleContext(FromContextPathContext.class, 0);
		}

		public TerminalNode COLON() {
			return getToken(ODataParser.COLON, 0);
		}

		public PortContext port() {
			return getRuleContext(PortContext.class, 0);
		}

		@Override
		public int getRuleIndex() {
			return RULE_odataURL;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ODataListener)
				((ODataListener) listener).enterOdataURL(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ODataListener)
				((ODataListener) listener).exitOdataURL(this);
		}
	}

	public static class SchemeContext extends ParserRuleContext {
		public SchemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_scheme;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ODataListener)
				((ODataListener) listener).enterScheme(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ODataListener)
				((ODataListener) listener).exitScheme(this);
		}
	}

	public static class HostContext extends ParserRuleContext {
		public HostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		public StringContext string() {
			return getRuleContext(StringContext.class, 0);
		}

		@Override
		public int getRuleIndex() {
			return RULE_host;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof ODataListener)
				((ODataListener) listener).enterHost(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof ODataListener)
				((ODataListener) listener).exitHost(this);
		}
	}

	public static class SlashContext extends ParserRuleContext {
		public SlashContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_slash;
		}
